Fix for breaking titles on IE11

--- a/src/fiu/components/card/_card.scss
+++ b/src/fiu/components/card/_card.scss
@@ -42,7 +42,6 @@
   font-size: 20px;
   line-height: 1.1em;
   font-weight: $fiu-font-weight-bold;
-  @include fiu-word-break();
   @include govuk-media-query($from: tablet) {
     font-size: 18px;
   }
